Typos and fix code error in 2020-04-10-faust-101(3).

--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -21,10 +21,10 @@ If ever the sounds produced with the IDE are of poor quality, with some clicks, 
 
 - Faust is a Domain-Specific Language for real-time signal processing and synthesis (like Csound, Max/MSP, Supercollider, Puredata,. . . ).
 - Faust is based on purely functional approach.
-- A Faust program denotes a signal processor : a function that maps input signals to output signals.
+- a Faust program denotes a signal processor: a function that maps input signals to output signals.
 - Programming in Faust is essentially combining signal processors using an algebra of 5 composition operations: `<: :> : , ~`.
 - Faust is a compiled language, the role of the Faust compiler is to synthesize the most efficient implementations.
-- Faust offers end-users a high-level alternative to C to develop audio applications for a large variety of platforms.
+- Faust offers end-users a high-level alternative to C/C++ to develop audio applications for a large variety of platforms.
 
 ## Part 1: Very simple examples
 <img src="img/bande-simple.png" width="100%" class="mx-auto d-block">
@@ -32,7 +32,9 @@ If ever the sounds produced with the IDE are of poor quality, with some clicks, 
 Let's start with some simple examples of Faust programs.
 
 ### Example 1: The simplest Faust program
-This is the simplest Faust program imaginable. It contains only one line of code, the definition: `process = _;`.
+This is the simplest Faust program imaginable. It contains only one line of code, the definition: `process = _;`. This program copies the audio input to the audio output. 
+
+Let's try this program using the online Faust IDE.
 
 <!-- faust-run -->
 ```
@@ -43,14 +45,14 @@ process = _;
 Several lessons can be learned from this very simple example:
 
 - a Faust program has at least one definition, that of the keyword `process` which indicates the entry point of the program. 
-- A definition always ends with a `;`. A common mistake is to forget the semicolon at the end of a definition.
+- a definition always ends with a `;`. A common mistake is to forget the semicolon at the end of a definition.
 - the `_` sign represents one of the _primitives_ of the language (primitives are the predefined functions of the language). It represents an _audio cable_ that lets the signal pass through without transforming it. This is what one calls in mathematics the _identity_ function, the signal that enters on the left comes out on the right identically. 
 
-Let's try this program using the online Faust IDE...
+
 
 ### Example 2: Adding two signals
 
-We saw in the previous example the primitive `_`. Faust has a large number of primitives, including all [mathematical operations] (https://faustdoc.grame.fr/manual/syntax/#faust-syntax).
+We saw in the previous example the primitive `_`. Faust has a large number of primitives, including all [mathematical operations](https://faustdoc.grame.fr/manual/syntax/#faust-syntax).
 
 The `+` primitive for instance is used to add two signals. It can therefore be used to transform a stereophonic signal (on two channels) into a monophonic signal as in the following example:
 
@@ -77,9 +79,9 @@ As you can hear, multiplying the two channels of a signal between them transform
 
 ### Example 4: Parallel composition
 
-Programming in Faust consists in assembling primitive operations to form more or less complex audio circuits. To realize these assemblies Faust has 5 composition operations: `~`, `,`, `;`, `<:`, `:>`.  
+Programming in Faust consists in assembling primitive operations to form more or less complex audio circuits. To realize these assemblies, Faust has 5 composition operations: `~`, `,`, `;`, `<:`, `:>`.  
 
-Let's first look at the parallel composition represented by the comma `,`. 
+Let's first look at the parallel composition represented by the comma `,`:
 
 
 <!-- faust-run -->
@@ -168,7 +170,7 @@ process = monoamp;
 <!-- faust-run -->
 ```
 monoamp = _, hslider("volume", 0.1, 0, 1, 0.01) : *;
-stereoamp = monoamp,monoamp;
+stereoamp = monoamp, monoamp;
 
 process = stereoamp;
 ```
@@ -185,7 +187,7 @@ Instead of horizontal sliders, we could use vertical sliders. Just replace `hsli
 <!-- faust-run -->
 ```
 monoamp = _, vslider("volume", 0.1, 0, 1, 0.01) : *;
-stereoamp = monoamp,monoamp;
+stereoamp = monoamp, monoamp;
 
 process = stereoamp;
 ```
@@ -201,8 +203,7 @@ Metadata is information that you put in square brackets in the slider name. For 
 <!-- faust-run -->
 ```
 monoamp = _, vslider("volume[style:knob]", 0.1, 0, 1, 0.01) : *;
-
-stereoamp = monoamp,monoamp;
+stereoamp = monoamp, monoamp;
 
 process = stereoamp;
 ```
@@ -213,13 +214,12 @@ process = stereoamp;
 
 We have used the core syntax of Faust so far. For example to multiply the incoming signal by `0.1` we wrote `_,0.1:*`. For numerical expressions this notation is not always the most convenient and sometimes we would prefer to use the more traditional infix notation and write instead `_*0.1`. We can also use the prefixed notation and write `*(0.1)`. 
 
-Let's rewrite the definition of the monoamp using the prefix notation:
+Let's rewrite the definition of the `monoamp` using the prefix notation:
 
 <!-- faust-run -->
 ```
 monoamp = *(vslider("volume[style:knob]", 0.1, 0, 1, 0.01));
-
-stereoamp = monoamp,monoamp;
+stereoamp = monoamp, monoamp;
 
 process = stereoamp;
 ```
@@ -251,9 +251,7 @@ Let's add a mute stage to our mono amplifier. In order to mute the signal we jus
 <!-- faust-run -->
 ```
 mute = *(1-checkbox("mute"));
-
 monoamp = *(vslider("volume[style:knob]", 0.1, 0, 1, 0.01)) : mute;
-
 stereoamp = monoamp, monoamp;
 
 process = stereoamp;
@@ -269,9 +267,7 @@ As can be seen in the previous example, by default, the layout of the elements i
 <!-- faust-run -->
 ```
 mute = *(1-checkbox("mute"));
-
 monoamp = *(vslider("volume[style:knob]", 0.1, 0, 1, 0.01)) : mute;
-
 stereoamp = hgroup("Marshall", monoamp, monoamp);
 
 process = stereoamp;
@@ -282,14 +278,12 @@ process = stereoamp;
 
 ### Example 14: Differentiate the volume of the two channels
 
-To differentiate the volume control of our two channels, we will parametrize monoamp with a channel number `c` which will be used to differentiate the name of each volume control. Note that the name `c` of the parameter must only have one letter to be well interpreted in the slider name `"volume %c[style:knob]"`:
+To differentiate the volume control of our two channels, we will parametrize `monoamp` with a channel number `c` which will be used to differentiate the name of each volume control. Note that the name `c` of the parameter must only have one letter to be well interpreted in the slider name `"volume %c[style:knob]"`:
 
 <!-- faust-run -->
 ```
 mute = *(1-checkbox("mute"));
-
 monoamp(c) = *(vslider("volume %c[style:knob]", 0.1, 0, 1, 0.01)) : mute;
-
 stereoamp = hgroup("Marshall", monoamp(0), monoamp(1));
 
 process = stereoamp;
@@ -307,9 +301,7 @@ In our case we want to indicate the number of channels of our amplifier:
 <!-- faust-run -->
 ```
 mute = *(1-checkbox("mute"));
-
 monoamp(c) = *(vslider("volume %c[style:knob]", 0.1, 0, 1, 0.01)) : mute;
-
 multiamp(N) = hgroup("Marshall", par(i, N, monoamp(i)));
 
 process = multiamp(2); // try multiamp(4)
@@ -469,7 +461,7 @@ process = 0.125 : + ~ _;
 
 To understand the above diagram, we will annotate it with its mathematical semantics:
 
-<img src="img/ramp-diag-math.svg" width="100%" class="mx-auto d-block">
+<img src="img/ramp-diag-math.svg" width="80%" class="mx-auto d-block">
 
 As can be seen in the diagram, the formula for the output signal is: \(y(t) = y(t-1) + 0.125\)
 
@@ -518,7 +510,7 @@ process = phase;
 
 <!-- /faust-run -->
 
-In our definition of `phase `, the value of the step, here `0.125`, controls the frequency of the generated signal. We would like to calculate this step value as a function of the desired frequency. In order to do the conversion, we need to know the sampling frequency. It is available in the standard library as `ma.SR`. To use this standard library we add the following line to the program: `import("stdfaust.lib");`.
+In our definition of `phase `, the value of the step, here `0.125`, controls the frequency of the generated signal. We would like to calculate this step value as a function of the desired frequency. In order to do the conversion, we need to know the sampling frequency. It is available in the standard library as `ma.SR` and will be setup at start time by the underlying the audio layer. To use this standard library we add the following line to the program: `import("stdfaust.lib");`.
 
 Suppose we want our phase signal to have a frequency of 1 Hz, then the step should be very small `1/ma.SR`, so that it takes `ma.SR` samples (i.e. 1 second) for the phase signal to go from 0 to 1.
 
@@ -569,7 +561,6 @@ import("stdfaust.lib");
 
 decimalpart(x) = x-int(x);
 phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
-
 squarewave(f) = (phase(f) > 0.5) * 2 - 1;
 
 process = squarewave(440);
@@ -590,7 +581,6 @@ import("stdfaust.lib");
 
 decimalpart(x) = x-int(x);
 phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
-
 osc(f) = sin(phase(f) * 2 * ma.PI);
 
 process = osc(440);
@@ -718,7 +708,6 @@ import("stdfaust.lib");
 
 decimalpart(x) = x-int(x);
 phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
-
 sawtooth(f) = phase(f) * 2 - 1;
 
 //process = sawtooth(440);
@@ -805,7 +794,7 @@ import("stdfaust.lib");
 
 // FIR
 process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) 
-        <: _ , transformation :> _;
+        <: _, transformation :> _;
 
 transformation = @(1) : *(hslider("gain", 0, -1, 1, 0.1));
 ```
