Fixing math formulas(2).

--- a/src/workshops/2018-12-01-paw.md
+++ b/src/workshops/2018-12-01-paw.md
@@ -30,9 +30,9 @@ To understand the above diagram let's annotate it with its mathematical semantic
 
 <img src="img/ramp-diag-math.svg" width="80%" class="mx-auto d-block">
 
-As we can see in the diagram, the formula of the output signal is: $y(t) = y(t-1) + 0.125$
+As we can see in the diagram, the formula of the output signal is: \(y(t) = y(t-1) + 0.125\)
 
-We can compute the first values of $y(t)$:
+We can compute the first values of \(y(t)\):
 
 - \(y(t<0)=0\)
 - \(y(0) = y(-1) + 0.125 = 0.125\)
