--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -34,7 +34,7 @@ Let's start with some simple examples of Faust programs.
 ### Example 1: The simplest Faust program
 This is the simplest Faust program imaginable. It contains only one line of code, the definition: `process = _;`. This program copies the audio input to the audio output. 
 
-Let's try this program using the online Faust IDE.
+Let's try this program using the online Faust IDE:
 
 <!-- faust-run -->
 ```
@@ -159,7 +159,6 @@ We have written very simple programs so far, that fit into one line of code. We 
 monoamp = _, hslider("volume", 0.1, 0, 1, 0.01) : *;
 process = monoamp;
 ```
-
 <!-- /faust-run -->
 
 
@@ -191,7 +190,6 @@ stereoamp = monoamp, monoamp;
 
 process = stereoamp;
 ```
-
 <!-- /faust-run -->
 
 ### Example 10: Knobs instead of sliders
@@ -207,12 +205,11 @@ stereoamp = monoamp, monoamp;
 
 process = stereoamp;
 ```
-
 <!-- /faust-run -->
 
 ### Example 11: Syntactic sugar
 
-We have used the core syntax of Faust so far. For example to multiply the incoming signal by `0.1` we wrote `_,0.1:*`. For numerical expressions this notation is not always the most convenient and sometimes we would prefer to use the more traditional infix notation and write instead `_*0.1`. We can also use the prefixed notation and write `*(0.1)`. 
+We have used the core syntax of Faust so far. For example to multiply the incoming signal by `0.1`, we wrote `_,0.1:*`. For numerical expressions this notation is not always the most convenient and sometimes we would prefer to use the more traditional infix notation and write instead `_*0.1`. We can also use the prefixed notation and write `*(0.1)`. 
 
 Let's rewrite the definition of the `monoamp` using the prefix notation:
 
@@ -362,7 +359,6 @@ bounce = @(4410) : *(0.75);
 monoecho = +~bounce;
 process = _, monoecho; 
 ```
-
 <!-- /faust-run -->
 
 
@@ -378,7 +374,6 @@ stereoecho = monoecho, monoecho;
 
 process = stereoecho; 
 ```
-
 <!-- /faust-run -->
 
 
@@ -394,7 +389,6 @@ stereoecho(d,f) = monoecho(d,f), monoecho(d,f);
 
 process = stereoecho(44100/4,0.75); 
 ```
-
 <!-- /faust-run -->
 
 
@@ -410,7 +404,6 @@ stereoecho(d,f) = monoecho(d,f), monoecho(d,f);
 
 process = stereoecho(44100/4, hslider("feedback", 0, 0, 1, 0.01)); 
 ```
-
 <!-- /faust-run -->
 
 
@@ -426,7 +419,6 @@ stereoecho(d,f) = monoecho(d,f), monoecho(d,f);
 
 process = stereoecho(44100/4, hslider("feedback", 0, 0, 1, 0.01)); 
 ```
-
 <!-- /faust-run -->
 
 
@@ -443,17 +435,16 @@ The first step is to build a _phase generator_ that produces a periodic sawtooth
 
 ### Example 1: Ramp
 
-To do this we will produce an "infinite" ramp, which we will then transform into a periodic signal thanks to a _part-decimal_ operation.
+To do this we will produce an "infinite" ramp, which we will then transform into a periodic signal thanks to a _part-decimal_ operation:
 
 <img src="img/ramp-sig.png" width="100%" class="mx-auto d-block">
 
-The ramp is produced by the following program :
+The ramp is produced by the following program:
 
 <!-- faust-run -->
 ```
 process = 0.125 : + ~ _;
 ```
-
 <!-- /faust-run -->
 
 
@@ -507,7 +498,6 @@ decimalpart(x) = x-int(x);
 phase = 0.125 : (+ : decimalpart) ~ _;
 process = phase;
 ```
-
 <!-- /faust-run -->
 
 In our definition of `phase `, the value of the step, here `0.125`, controls the frequency of the generated signal. We would like to calculate this step value as a function of the desired frequency. In order to do the conversion, we need to know the sampling frequency. It is available in the standard library as `ma.SR` and will be setup at start time by the underlying the audio layer. To use this standard library we add the following line to the program: `import("stdfaust.lib");`.
@@ -658,7 +648,6 @@ partial(n,f) = os.osc(f*n) * hslider("partial %n", 0.25, 0, 1, 0.01);
 
 process = sum(i, 4, partial(i+1, hslider("freq", 440, 20, 8000, 0.001)));
 ```
-
 <!-- /faust-run -->
 Note the use of the `sum(i, n, foo(i))` construction which is equivalent to `foo(0)+foo(1)+...+foo(n-1)`.
 
@@ -677,7 +666,6 @@ squarewave(f) = 4/ma.PI*sum(k, 4, os.osc((2*k+1)*f)/(2*k+1));
 
 process = squarewave(55);
 ```
-
 <!-- /faust-run -->
 As an exercise, change the number of harmonics to see the approximation improve (but do not exceed SR/2).
 
@@ -695,7 +683,6 @@ sawtooth(f) = 2/ma.PI*sum(k, 4, (-1)^k * os.osc((k+1)*f)/(k+1));
 
 process = sawtooth(55);
 ```
-
 <!-- /faust-run -->
 
 ### Example 8: Band limited oscillators
@@ -714,7 +701,6 @@ sawtooth(f) = phase(f) * 2 - 1;
 
 process = os.sawN(3,400);
 ```
-
 <!-- /faust-run -->
 
 
@@ -744,7 +730,6 @@ import("stdfaust.lib");
 
 process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.lowpass(3, hslider("hifreq", 2000, 20, 20000, 1));
 ```
-
 <!-- /faust-run -->
 
 ### Example 3: high pass
@@ -754,9 +739,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.lowpass(3, hslider("
 import("stdfaust.lib");
 
 process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.highpass(3, hslider("lowfreq", 400, 20, 20000, 1));
-
 ```
-
 <!-- /faust-run -->
 
 ### Example 4: bandpass
@@ -778,10 +761,9 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01)
 import("stdfaust.lib");
 
 process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) 
-        : fi.resonlp(
-                hslider("hifreq", 400, 20, 20000, 1),
-                hslider("Q", 1, 1, 100, 0.01),
-                hslider("gain", 1, 0, 2, 0.01));
+        : fi.resonlp(hslider("hifreq", 400, 20, 20000, 1),
+                    hslider("Q", 1, 1, 100, 0.01),
+                    hslider("gain", 1, 0, 2, 0.01));
 ```
 <!-- /faust-run -->
 
@@ -1002,7 +984,6 @@ process = FM(
             hslider("amp modulation", 0, 0, 1, 0.01)
             ) 
         <: _,_;
-
 ```
 <!-- /faust-run -->
 
