--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -92,7 +92,7 @@ process = _, _;
 
 We made a _stereo cable_ and when we play the audio file, we now hear it on both speakers.
 
-It is very important to distinguish between _primitives_, such as `_`, `+` or `*`, and _composition operations_ such as `,` or `;`.  _Primitives_ represent operations on audio signals, whereas composition operations are used to link two audio operations together. In other words, you can write `+` or `*` alone, because they represent valid audio operations, but you can never write `,` or `:` alone because they are used to connect two audio operations. You must always write `A,B` or `A:B`.
+It is very important to distinguish between _primitives_, such as `_`, `+` or `*`, and _composition operations_ such as `,` or `:`.  _Primitives_ represent operations on audio signals, whereas composition operations are used to link two audio operations together. In other words, you can write `+` or `*` alone, because they represent valid audio operations, but you can never write `,` or `:` alone because they are used to connect two audio operations. You must always write `A,B` or `A:B`.
 
 The primitives of Faust are organized in several categories. We find all the numerical functions of the C language, but applied to audio signals:
 
@@ -141,7 +141,7 @@ But, just as in `(2*3)+7` were the parentheses are not really necessary because 
 
 ### Example 6: Controlling the volume with a slider
 
-Instead of controlling the volume by editing the code, it is far more convenient to use a graphical slider. For that purpose we can use a `hslider(...)`, a horizontal slider. It takes five parameters. The first one is the name `"volume"`, then we have the defaut value `0.1`, the mimimun value `0`, the maximum value `1` and a step value `0.1`. So here the default value is `0.1`:
+Instead of controlling the volume by editing the code, it is far more convenient to use a graphical slider. For that purpose we can use a `hslider(...)`, a horizontal slider. It takes five parameters. The first one is the name `"volume"`, then we have the defaut value `0.1`, the minimun value `0`, the maximum value `1` and a step value `0.1`. So here the default value is `0.1`:
 
 <!-- faust-run -->
 ```
@@ -500,11 +500,11 @@ process = phase;
 ```
 <!-- /faust-run -->
 
-In our definition of `phase `, the value of the step, here `0.125`, controls the frequency of the generated signal. We would like to calculate this step value as a function of the desired frequency. In order to do the conversion, we need to know the sampling frequency. It is available in the standard library as `ma.SR` and will be setup at start time by the underlying the audio layer. To use this standard library we add the following line to the program: `import("stdfaust.lib");`.
+In our definition of `phase `, the value of the step, here `0.125`, controls the frequency of the generated signal. We would like to calculate this step value as a function of the desired frequency. In order to do the conversion, we need to know the sampling frequency. It is available in the standard library as `ma.SR` and will be setup at start time by the underlying audio layer. To use this standard library we add the following line to the program: `import("stdfaust.lib");`.
 
 Suppose we want our phase signal to have a frequency of 1 Hz, then the step should be very small `1/ma.SR`, so that it takes `ma.SR` samples (i.e. 1 second) for the phase signal to go from 0 to 1.
 
-If we want a frequency of 440 Hz, we need a 440 times larger step so that the phase signal goes from 0 to 1440 times faster:
+If we want a frequency of 440 Hz, we need a 440 times larger step so that the phase signal goes from 0 to 1, 440 times faster:
 
 ```
 phase = 440/ma.SR : (+ : decimalpart) ~ _;
