--- a/quick-reference/faust-quick-reference.tex
+++ b/quick-reference/faust-quick-reference.tex
@@ -133,10 +133,10 @@
 
 % \titlepic{
 %   \includegraphics[width=15cm]{images/bandeau-faust}
-% }2.5.31
-\title{\Huge\color{yoheader}FAUST Quick Reference\\\Large(version 2.15.0)}
+% }
+\title{\Huge\color{yoheader}FAUST Quick Reference\\\Large(version 2.37.3)}
 \author{\textsc{GRAME}\\Centre National de Cr\'eation Musicale}
-\date{February 5, 2019}
+\date{October 22, 2021}
 
 \railalias{recur}{$\sim$}
 \railalias{lbrace}{\{}
@@ -153,12 +153,12 @@
 \railterm{recur,lbrace,rbrace,dollar,mod,kot,arobase,ampersand,backslash,fdelay, pipe, hat}
 
 \newcommand{\farg}[1]{\textrm{\textit{#1}}}
-%\newcommand{\ldbrack}{[\![ \,}
-%\newcommand{\rdbrack}{\, ]\!] }
-%\newcommand{\rdbrackC}{\rdbrack_{\mathrm{C}}\,}
-%\newcommand{\dbrack}[1]{\ldbrack #1 \rdbrack}
-%\newcommand{\semantic}[1]{\ldbrack #1 \rdbrack}
-%\newcommand{\dbrackC}[1]{\ldbrack #1 \rdbrackC}
+\newcommand{\ldbrack}{[\![ \,}
+\newcommand{\rdbrack}{\, ]\!] }
+\newcommand{\rdbrackC}{\rdbrack_{\mathrm{C}}\,}
+\newcommand{\dbrack}[1]{\ldbrack #1 \rdbrack}
+\newcommand{\semantic}[1]{\ldbrack #1 \rdbrack}
+\newcommand{\dbrackC}[1]{\ldbrack #1 \rdbrackC}
 
 \newcommand{\faust}{\textsc{Faust}\xspace}
 \newcommand{\latex}{\LaTeX\xspace}
