Faust quick reference updated to version 2.46. Priority in infix notation, extended syntax for variable parts in labels.

--- a/quick-reference/faust-quick-reference.tex
+++ b/quick-reference/faust-quick-reference.tex
@@ -134,7 +134,7 @@
 % \titlepic{
 %   \includegraphics[width=15cm]{images/bandeau-faust}
 % }
-\title{\Huge\color{yoheader}FAUST Quick Reference\\\Large(version 2.41.1)}
+\title{\Huge\color{yoheader}FAUST Quick Reference\\\Large(version 2.46)}
 \author{\textsc{GRAME}\\Centre National de Cr\'eation Musicale}
 \date{June 27, 2022}
 
@@ -183,6 +183,7 @@
 \input{chapters/introduction}
 \input{chapters/installation}
 \input{chapters/syntax}
+\input{chapters/primitives}
 \input{chapters/compiler}
 \input{chapters/libfaust}
 \input{chapters/architectures}
