Correct PAW tutorial.

--- a/src/workshops/2018-12-01-paw.md
+++ b/src/workshops/2018-12-01-paw.md
@@ -146,7 +146,7 @@ It is a good idea to also add an envelop generator. Here we will use a predefine
 ```
 import("stdfaust.lib");
 decimalpart(x) = x-int(x);
-phase(f) = f/ma.SR : (+ : decimalpart) ~ _ ;
+phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
 osc(f) = phase(f) * 2 * ma.PI : sin;
 process = osc(hslider("freq", 440, 20, 10000, 1)) 
         * hslider("gain", 0.5, 0, 1, 0.01) 
@@ -158,12 +158,18 @@ process = osc(hslider("freq", 440, 20, 10000, 1))
 
 Instead of playing pure sine waves tones, let's improve the timbre with simple additive synthesis:
 
+<!-- faust-run -->
 ```
+import("stdfaust.lib");
+decimalpart(x) = x-int(x);
+phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
+osc(f) = phase(f) * 2 * ma.PI : sin;
 timbre(f) = osc(f)*0.5 + osc(f*2)*0.25 + osc(f*3)*0.125;
 process = timbre(hslider("freq", 440, 20, 10000, 1)) 
         * hslider("gain", 0.5, 0, 1, 0.01) 
         * (button("gate") : en.adsr(0.1,0.1,0.98,0.1));
 ```
+<!-- /faust-run -->
 
 ## Running as a Polyphonic MIDI Synth
 
@@ -183,7 +189,7 @@ effect = dm.zita_light;
 ```
 import("stdfaust.lib");
 decimalpart(x) = x-int(x);
-phase(f) = f/ma.SR : (+ : decimalpart) ~ _ ;
+phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
 timbre(f) = phase(f)*0.5 + phase(f*2)*0.25 + phase(f*3)*0.125;
 
 process = timbre(hslider("freq", 440, 20, 10000, 1)) 
