--- a/src/workshops/2018-12-01-paw.md
+++ b/src/workshops/2018-12-01-paw.md
@@ -66,7 +66,7 @@ From a mathematical point of view that would be perfectly correct, but we will a
 process = 0.125 : (+ : decimalpart) ~ _;
 ```
 
-We can now listen the produced signal. Just copy and past `decimalpart` and `process` definitions into the [Faust editor](https://fausteditor.grame.fr)
+We can now listen the produced signal. Just copy and past `decimalpart` and `process` definitions into the [Faust Web IDE](https://faustide.grame.fr).
 
 ## Controlling the Frequency of the Phase Signal
 
