--- a/src/workshops/2018-12-01-paw.md
+++ b/src/workshops/2018-12-01-paw.md
@@ -54,7 +54,7 @@ Let's define a function to do that:
 decimalpart(x) = x - int(x);
 ```
 
-We can now use that function to transform our ramp into a sawtooth It is then tempting to write:
+We can now use that function to transform our ramp into a sawtooth. It is then tempting to write:
 
 ```
 process = 0.125 : + ~ _ : decimalpart;
