--- a/src/workshops/2018-12-01-paw.md
+++ b/src/workshops/2018-12-01-paw.md
@@ -70,7 +70,7 @@ We can now listen the produced signal. Just copy and past `decimalpart` and `pro
 
 ## Controlling the Frequency of the Phase Signal
 
-Let's first rearrange our code
+Let's first rearrange our code:
 
 <!-- faust-run -->
 ```
