--- a/src/workshops/2018-12-01-paw.md
+++ b/src/workshops/2018-12-01-paw.md
@@ -104,7 +104,7 @@ process = phase(440);
 
 ## Creating a Sine Wave Oscillator
 
-The next step is to transform above phase generator into a sine wave generator. We will use the `sin` primitive that computes the sine of x (measured in radians). Therefore we start for the phase signal, we multiply it by $2\pi$ to obtain radiants, and compute the sine. The full program is the following:
+The next step is to transform above phase generator into a sine wave generator. We will use the `sin` primitive that computes the sine of x (measured in radians). Therefore we start for the phase signal, we multiply it by 2PI to obtain radiants, and compute the sine. The full program is the following:
 
 <!-- faust-run -->
 ```
