Correct pictures size.

--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -19,7 +19,7 @@ If ever the sounds produced with the IDE are of poor quality, with some clicks, 
 
 ## Faust in a few words
 
-- Faust is a Domain-Specific Language for real-time signal processing and synthesis (like Csound, Max/MSP, Supercollider, Puredata,. . . ).
+- Faust is a Domain-Specific Language for real-time signal processing and synthesis (like Csound, Max/MSP, SuperCollider, PureData,. . . ).
 - Faust is based on purely functional approach.
 - a Faust program denotes a signal processor: a function that maps input signals to output signals.
 - Programming in Faust is essentially combining signal processors using an algebra of 5 composition operations: `<: :> : , ~`.
@@ -27,7 +27,8 @@ If ever the sounds produced with the IDE are of poor quality, with some clicks, 
 - Faust offers end-users a high-level alternative to C/C++ to develop audio applications for a large variety of platforms.
 
 ## Part 1: Very simple examples
-<img src="img/bande-simple.png" width="100%" class="mx-auto d-block">
+
+<img src="img/bande-simple.png" width="90%" class="mx-auto d-block">
 
 Let's start with some simple examples of Faust programs.
 
@@ -48,21 +49,17 @@ Several lessons can be learned from this very simple example:
 - a definition always ends with a `;`. A common mistake is to forget the semicolon at the end of a definition.
 - the `_` sign represents one of the _primitives_ of the language (primitives are the predefined functions of the language). It represents an _audio cable_ that lets the signal pass through without transforming it. This is what one calls in mathematics the _identity_ function, the signal that enters on the left comes out on the right identically. 
 
-
-
 ### Example 2: Adding two signals
 
 We saw in the previous example the primitive `_`. Faust has a large number of primitives, including all [mathematical operations](https://faustdoc.grame.fr/manual/syntax/#faust-syntax).
 
 The `+` primitive for instance is used to add two signals. It can therefore be used to transform a stereophonic signal (on two channels) into a monophonic signal as in the following example:
 
-
 <!-- faust-run -->
 ```
 process = +;
 ```
 <!-- /faust-run -->
-
 
 ### Example 3: Multiplying two signals
 
@@ -75,7 +72,6 @@ process = *;
 <!-- /faust-run -->
 
 As you can hear, multiplying the two channels of a signal between them transforms the sound quite drastically.
-
 
 ### Example 4: Parallel composition
 
@@ -138,7 +134,6 @@ Note that we have used parentheses in this example to clearly mark the order in 
 
 But, just as in `(2*3)+7` were the parentheses are not really necessary because multiplication takes precedence over addition, one could write directly `process = _,0.1 : *;` without the parentheses, because parallel composing takes precedence over sequential composing. The priority of the composition operators is shown in the previous table.
 
-
 ### Example 6: Controlling the volume with a slider
 
 Instead of controlling the volume by editing the code, it is far more convenient to use a graphical slider. For that purpose we can use a `hslider(...)`, a horizontal slider. It takes five parameters. The first one is the name `"volume"`, then we have the defaut value `0.1`, the minimun value `0`, the maximum value `1` and a step value `0.1`. So here the default value is `0.1`:
@@ -153,14 +148,12 @@ process = _, hslider("volume", 0.1, 0, 1, 0.01) : *;
 
 We have written very simple programs so far, that fit into one line of code. We will now introduce additional definitions. A definition should be understood as a way of giving a name to something, which saves us from typing the definition every time and makes the program easier to understand:
 
-
 <!-- faust-run -->
 ```
 monoamp = _, hslider("volume", 0.1, 0, 1, 0.01) : *;
 process = monoamp;
 ```
 <!-- /faust-run -->
-
 
 ### Example 8: Stereo Amplifier
  
@@ -176,8 +169,6 @@ process = stereoamp;
 <!-- /faust-run -->
 
 Note that even if the hslider volume appears several times in our code, there will only be one in the user interface:
-
-
 
 ### Example 9: Vertical sliders
 
@@ -256,7 +247,6 @@ process = stereoamp;
 <!-- /faust-run -->
 
 
-
 ### Example 13: Vertical and horizontal Layout
 
 As can be seen in the previous example, by default, the layout of the elements is vertical. You can change this layout by using  `hgroup(...)` and  `vgroup(...)`. For example to make the layout horizontal you can write:
@@ -271,8 +261,7 @@ process = stereoamp;
 ```
 <!-- /faust-run -->
 
-
-
+s
 ### Example 14: Differentiate the volume of the two channels
 
 To differentiate the volume control of our two channels, we will parametrize `monoamp` with a channel number `c` which will be used to differentiate the name of each volume control. Note that the name `c` of the parameter must only have one letter to be well interpreted in the slider name `"volume %c[style:knob]"`:
@@ -307,7 +296,8 @@ process = multiamp(2); // try multiamp(4)
 
 
 ## Part 2: Delays and Feedbacks
-<img src="img/bande-feedback.png" width="100%" class="mx-auto d-block">
+
+<img src="img/bande-feedback.png" width="90%" class="mx-auto d-block">
 
 In this new section we will see two important notions, that of delay with the `@` primitive, and that of feedback (from a looped circuit) which will require the use of the recursive composition `A~B` which allows to loop the outputs of A into the inputs of B, and the outputs of B into the inputs of A.
 
@@ -423,7 +413,8 @@ process = stereoecho(44100/4, hslider("feedback", 0, 0, 1, 0.01));
 
 
 ## Part 3: Basic Oscillators
-<img src="img/bande-basic.png" width="100%" class="mx-auto d-block">
+
+<img src="img/bande-basic.png" width="90%" class="mx-auto d-block">
 
 By convention, in Faust, a full-scale audio signal varies between -1 and +1, but we will first start with a sawtooth signal between 0 and 1 which will then be used as a _phase generator_ to produce different waveforms.
 
@@ -431,13 +422,13 @@ By convention, in Faust, a full-scale audio signal varies between -1 and +1, but
 
 The first step is to build a _phase generator_ that produces a periodic sawtooth signal between 0 and 1. Here is the signal we want to generate :
 
-<img src="img/phase-sig.png" width="100%" class="mx-auto d-block">
+<img src="img/phase-sig.png" width="80%" class="mx-auto d-block">
 
 ### Example 1: Ramp
 
 To do this we will produce an "infinite" ramp, which we will then transform into a periodic signal thanks to a _part-decimal_ operation:
 
-<img src="img/ramp-sig.png" width="100%" class="mx-auto d-block">
+<img src="img/ramp-sig.png" width="80%" class="mx-auto d-block">
 
 The ramp is produced by the following program:
 
@@ -452,7 +443,7 @@ process = 0.125 : + ~ _;
 
 To understand the above diagram, we will annotate it with its mathematical semantics:
 
-<img src="img/ramp-diag-math.svg" width="80%" class="mx-auto d-block">
+<img src="img/ramp-diag-math.svg" width="60%" class="mx-auto d-block">
 
 As can be seen in the diagram, the formula for the output signal is: \(y(t) = y(t-1) + 0.125\)
 
@@ -559,7 +550,8 @@ process = squarewave(440);
 
 
 ## Part 4: Additive synthesis
-<img src="img/bande-additive.png" width="100%" class="mx-auto d-block">
+
+<img src="img/bande-additive.png" width="90%" class="mx-auto d-block">
 
 ### Example 1: sine wave generator
 
@@ -703,7 +695,8 @@ process = os.sawN(3,400);
 
 
 ## Part 5: Subtractive synthesis
-<img src="img/bande-substractive.png" width="100%" class="mx-auto d-block">
+
+<img src="img/bande-substractive.png" width="90%" class="mx-auto d-block">
 
 Subtractive synthesis is the opposite of additive synthesis. It consists in starting from a rich sound, for example white noise, and sculpting its spectrum.
 
@@ -963,7 +956,8 @@ string(coef, freq, t60, level, trig) = no.noise*level
 <!-- /faust-run -->
 
 ## Part 6: Synthesis by frequency modulation
-<img src="img/bande-fm.png" width="100%" class="mx-auto d-block">
+
+<img src="img/bande-fm.png" width="90%" class="mx-auto d-block">
 
 ### Example 1: frequency modulation
 
