Improve Faust 101 documentation.

--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -548,7 +548,6 @@ process = squarewave(440);
 ```
 <!-- /faust-run -->
 
-
 ## Part 4: Additive synthesis
 
 <img src="img/bande-additive.png" width="90%" class="mx-auto d-block">
@@ -568,7 +567,6 @@ osc(f) = sin(phase(f) * 2 * ma.PI);
 process = osc(440);
 ```
 <!-- /faust-run -->
-
 
 But now that we have seen how to create a sinusoidal oscillator from scratch, we will use the one defined in the standard Faust libraries:
 
@@ -594,7 +592,6 @@ process = os.osc(440) * hslider("gain", 0.1, 0, 1, 0.01);
 
 The first parameter is a string that indicates the name of the slider. It is followed by four numeric parameters. The second parameter `0.1` indicates the default value of the slider, i.e. the value that the slider will deliver when the program is started. Then we have the minimum value `0`, the maximum value `1` and the variation step `0.01`.
 
-
 ### Example 3: Exercise, add a frequency control
 
 As an exercise, replace, in the previous example, the frequency 440 by a horizontal slider whose name will be ``freq``, the default value `110`, the minimum value `40`, the maximum value `8000` and the step `1`:
@@ -607,11 +604,9 @@ process = os.osc(440 /*to replace*/) * hslider("gain", 0.1, 0, 1, 0.01);
 ```
 <!-- /faust-run -->
 
-
 ### Example 4: Frequency aliasing phenomenon beyond SR/2
 
 A well known problem in the field of digital sound synthesis is frequency [aliasing](https://en.wikipedia.org/wiki/Aliasing): any frequency beyond half the sampling frequency is _folded_ in the audible spectrum:
-
 
 <!-- faust-run -->
 ```
@@ -714,6 +709,8 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01);
 
 ### Example 2: lowpass
 
+Here the noise sound is filtered with a [low-pass filter](https://en.wikipedia.org/wiki/Low-pass_filter) that removes frequencies lower than a selected cutoff frequency: 
+
 <!-- faust-run -->
 ```
 import("stdfaust.lib");
@@ -722,7 +719,11 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.lowpass(3, hslider("
 ```
 <!-- /faust-run -->
 
+The used [fi.low](https://faustlibraries.grame.fr/libs/filters/#filowpass) filter can be defined with an argument that modifies the frequency attenuation slope.
+
 ### Example 3: high pass
+
+Here the noise sound is filtered with a [high-pass filter](https://en.wikipedia.org/wiki/High-pass_filter) that removes frequencies higher than a selected cutoff frequency: 
 
 <!-- faust-run -->
 ```
@@ -732,7 +733,11 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.highpass(3, hslider(
 ```
 <!-- /faust-run -->
 
+The used [fi.highpass](https://faustlibraries.grame.fr/libs/filters/#highpass) filter can be defined with an argument that modifies the frequency attenuation slope.
+
 ### Example 4: bandpass
+
+By combining a low-pass and high-pass filter in sequence, a [bandpass filter](https://en.wikipedia.org/wiki/Band-pass_filter) that removes frequencies lower than a selected low cutoff frequency, and higher than a selected high cutoff frequency, can be defined (using the already described `fi.lowpass` and `fi.highpass` filters): 
 
 <!-- faust-run -->
 ```
@@ -746,6 +751,8 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01)
 
 ### Example 5: resonant
 
+A resonant filter amplifies a selected frequency range: 
+
 <!-- faust-run -->
 ```
 import("stdfaust.lib");
@@ -757,8 +764,12 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01)
 ```
 <!-- /faust-run -->
 
+The used [fi.resonlp](https://faustlibraries.grame.fr/libs/filters/#resonlp) filter has an argument to select the desired frequency, a Q factor to shape the frequency range, and a gain factor.
+
 
 ### Example 6: fir
+
+Here a [FIR](https://en.wikipedia.org/wiki/Finite_impulse_response) filter is used: 
 
 <!-- faust-run -->
 ```
@@ -775,6 +786,8 @@ transformation = @(1) : *(hslider("gain", 0, -1, 1, 0.1));
 
 ### Example 7: iir
 
+Here a [IIR](https://en.wikipedia.org/wiki/Infinite_impulse_response) filter is used: 
+
 <!-- faust-run -->
 ```
 import("stdfaust.lib");
@@ -788,6 +801,8 @@ transformation = @(0) : *(hslider("gain", 0, -0.95, 0.95, 0.01));
 <!-- /faust-run -->
 
 ### Example 8: comb filter
+
+A [comb filter](https://en.wikipedia.org/wiki/Comb_filter) attenuates a set of consecutives frequency bands: 
 
 <!-- faust-run -->
 ```
@@ -803,7 +818,6 @@ transformation = @(hslider("delay", 0, 0, 20, 1)) : *(hslider("gain", 0, -0.98, 
 
 ### Example 9: Karplus Strong (1/2)
 
-
 <!-- faust-run -->
 ```
 import("stdfaust.lib");
@@ -818,9 +832,7 @@ mean(x) = (x+x')/2;
 ```
 <!-- /faust-run -->
 
-
 ### Example 10: Karplus Strong (2/2)
-
 
 <!-- faust-run -->
 ```
@@ -841,9 +853,7 @@ upfront(x) = x>x';
 ```
 <!-- /faust-run -->
 
-
 ### Example 11: Kisana
-
 
 <!-- faust-run -->
 ```
