Description of modulation

--- a/quick-reference/faust-quick-reference.tex
+++ b/quick-reference/faust-quick-reference.tex
@@ -184,6 +184,7 @@
 \input{chapters/installation}
 \input{chapters/syntax}
 \input{chapters/primitives}
+\input{chapters/modulation}
 \input{chapters/compiler}
 \input{chapters/libfaust}
 \input{chapters/architectures}
