--- a/quick-reference/faust-quick-reference.tex
+++ b/quick-reference/faust-quick-reference.tex
@@ -90,7 +90,7 @@
 
 % \relax
 
-\begin{document} 
+\begin{document}
 \ChRuleWidth{1pt}
 % \ChNumVar{\raggedleft\fontsize{80}{82}\sffamily\bfseries\color{yoheader}}
 \ChNumVar{\raggedleft\Huge\color{yoheader}}
@@ -112,17 +112,17 @@
   tabsize=4,
   showspaces=false,
   showstringspaces=false,
-  language=C++, 
+  language=C++,
   basicstyle=\small\ttfamily\color{yotxt},
   numbers=none,
   stepnumber=2,
   commentstyle=\slshape\color{mylstcmt},
-  breaklines=true, 
+  breaklines=true,
   emph={component, declare, environment, import, library, process},
   emph={[2]ffunction, fconstant, fvariable},
   emph={[3]button, checkbox, vslider, hslider, nentry, vgroup, hgroup, tgroup, vbargraph, hbargraph, attach},
   emphstyle=\color{mylstkey},
-%  morecomment=[s][\color{mylsteqn}]{<equation>}{</equation>},
+  %  morecomment=[s][\color{mylsteqn}]{<equation>}{</equation>},
   morecomment=[s][\color{mylstdoc}]{<mdoc>}{</mdoc>},
   %% frame=single,
   backgroundcolor=\color{yobg},
@@ -134,9 +134,9 @@
 % \titlepic{
 %   \includegraphics[width=15cm]{images/bandeau-faust}
 % }
-\title{\Huge\color{yoheader}FAUST Quick Reference\\\Large(version 2.74.6)}
+\title{\Huge\color{yoheader}FAUST Quick Reference\\\Large(version 2.74.6b)}
 \author{\textsc{GRAME}\\Centre National de Cr\'eation Musicale}
-\date{June 18, 2024}
+\date{July 8, 2024}
 
 \railalias{recur}{$\sim$}
 \railalias{lbrace}{\{}
@@ -165,7 +165,7 @@
 \newcommand{\ircam}{\textsc{Ircam}\xspace}
 \newcommand{\astree}{\textsc{Astree}\xspace}
 \newcommand{\svg}{\textsc{Svg}\xspace}
- 
+
 
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
@@ -192,8 +192,8 @@
 \input{chapters/http}
 \input{chapters/midi}
 \input{chapters/polyphony}
-\input{chapters/codegeneration} 
-\input{chapters/mathdoc} 
-\input{chapters/acknowledgments} 
+\input{chapters/codegeneration}
+\input{chapters/mathdoc}
+\input{chapters/acknowledgments}
 
 \end{document}
