--- a/quick-reference/faust-quick-reference.tex
+++ b/quick-reference/faust-quick-reference.tex
@@ -134,7 +134,7 @@
 % \titlepic{
 %   \includegraphics[width=15cm]{images/bandeau-faust}
 % }
-\title{\Huge\color{yoheader}FAUST Quick Reference\\\Large(version 2.74.6b)}
+\title{\Huge\color{yoheader}FAUST Quick Reference\\\Large(version 2.74.6)}
 \author{\textsc{GRAME}\\Centre National de Cr\'eation Musicale}
 \date{July 8, 2024}
 
